# clock-pay

./: README.md
clock_anchor/: .gitignore  Anchor.toml  clock.sh
clock_anchor/programs/auto/: Cargo.toml
clock_anchor/tests/: auto.ts  utils.ts
clocktest/: package.json
clocktest/programs/auto/src/: lib.rs
clocktest/tests/: utils.ts
program/: Cargo.toml  clock.sh  deploy.sh
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
scripts/: .gitignore  .prettierignore  package.json
scripts/src/: borsh.ts  serde.ts  test.ts  utils.ts
