[package]
name = "program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
solana-program = "=1.14.4"
spl-token = { version = "3.5.0", features = ["no-entrypoint"]}
thiserror = "1.0.24"
arrayref = "0.3.6"

[features]
test-bpf = []

[dev-dependencies]
solana-logger = "=1.14.4"
solana-program-test = "=1.14.4"
solana-sdk = "=1.14.4"
solana-validator = "=1.14.4"

[lib]
crate-type = ["cdylib", "lib"]
