[package]
name = "program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spl-token = {version = "3.5.0", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "1.0.5", features = ["no-entrypoint"]}
thiserror = "1.0.24"
borsh = "0.9.3"
clockwork-sdk = "1.4.0"
anchor-lang = "0.26.0"
solana-program = "1.13.5"

[lib]
crate-type = ["cdylib", "lib"]
