[package]
name = "auto"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "auto"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = { version = "0.26.0", features = ["token"] }
clockwork-sdk = "1.4.0"
#spl-token = {version = "3.5.0", features = ["no-entrypoint"]}
#clockwork-sdk = { version = "1.3.16", features = ["thread"] }